--- a/src/components/directory/CustomNode.module.css
+++ b/src/components/directory/CustomNode.module.css
@@ -1,21 +1,17 @@
 .root {
-    align-items: center;
-    display: grid;
-    grid-template-columns: auto auto 1fr auto;
     height: 32px;
-    padding-inline-end: 8px;
     cursor: pointer;
   }
 
-  .root:hover {
-    background-color: #1c334d;
-  }
+.root:hover {
+background-color: #1c334d;
+}
 
-  .typeIcon.canOpen {
-    cursor: pointer;
-  }
+.root .actionMenu {
+opacity: 0;
+}
 
-  .labelGridItem {
-    padding-inline-start: 8px;
-  }
+.root:hover .actionMenu {
+    opacity: 1;
+}
   
